--- a/package.json
+++ b/package.json
@@ -2,13 +2,30 @@
   "name": "webpack-study",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --open --hot",
+    "server": "webpack-dev-server --open",
+    "dev2": "webpack-dev-server"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fearlessxmm/webpack-study.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/fearlessxmm/webpack-study/issues"
+  },
+  "homepage": "https://github.com/fearlessxmm/webpack-study#readme",
   "dependencies": {
     "jquery": "^3.4.1"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.32.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1"
   }
 }
